fix: linux artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,11 +208,15 @@ jobs:
           EARTHLY_PUSH: true
         run: |
           earthly -P +ci --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="latest"
+      - name: Rename artifact
+        run: |
+          cp partner-chains-node-artifact/partner-chains-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+          chmod +x partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
-          name: partner-chains-node-artifact
-          path: partner-chains-node-artifact
+          name: partner-chains-node-linux-artifact
+          path: partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
       - name: Upload chain spec artifacts
         uses: actions/upload-artifact@v4
         with:
