--- a/.github/actions/release/create-draft-release/action.yml
+++ b/.github/actions/release/create-draft-release/action.yml
@@ -4,9 +4,10 @@ inputs:
   tag:
     description: "Tag for the release"
     required: true
-
+  sha:
+    description: "SHA of the commit"
+    required: true
 outputs: {}
-
 runs:
   using: "composite"
   steps:
@@ -17,32 +18,33 @@ runs:
         echo "PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN=partner-chains-node-${{ inputs.tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
         echo "PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN=partner-chains-node-${{ inputs.tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
       shell: bash
-
     - name: Download partner-chains-node-linux-artifact
       uses: actions/download-artifact@v4
       with:
         name: partner-chains-node-linux-artifact
         path: artifact-linux/
-
     - name: Download partner-chains-node-macos-x86_64-artifact
       uses: actions/download-artifact@v4
       with:
         name: partner-chains-node-macos-x86_64-artifact
         path: artifact-macos-x86_64/
-
     - name: Download partner-chains-node-macos-arm64-artifact
       uses: actions/download-artifact@v4
       with:
         name: partner-chains-node-macos-arm64-artifact
         path: artifact-macos-arm64/
-
+    - name: Rename artifacts to use tag
+      run: |
+        mv "artifact-linux/partner-chains-node-${{ inputs.sha }}-x86_64-linux" "artifact-linux/${{ env.PARTNER_CHAINS_NODE_X86_64_LINUX }}"
+        mv "artifact-macos-x86_64/partner-chains-node-${{ inputs.sha }}-x86_64-apple-darwin" "artifact-macos-x86_64/${{ env.PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN }}"
+        mv "artifact-macos-arm64/partner-chains-node-${{ inputs.sha }}-aarch64-apple-darwin" "artifact-macos-arm64/${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}"
+      shell: bash
     - name: Check if release already exists
       id: check_release
       run: |
         tag="${{ inputs.tag }}"
         echo "Checking if release with tag $tag exists..."
         release_response=$(curl -s -H "Authorization: token ${{ env.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/tags/$tag")
-
         if echo "$release_response" | grep -q '"message": "Not Found"'; then
           echo "Release with tag $tag does not exist. Proceeding to create a new draft release."
           echo "release_exists=false" >> $GITHUB_OUTPUT
@@ -53,13 +55,11 @@ runs:
           echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_OUTPUT
         fi
       shell: bash
-
     - name: Checkout specific SHA
       uses: actions/checkout@v4
       with:
         ref: ${{ inputs.sha }}
         path: release-sha
-
     - name: Create draft release
       id: create_release
       if: ${{ steps.check_release.outputs.release_exists == 'false' }}
@@ -72,7 +72,6 @@ runs:
         generate_release_notes: false
       env:
         GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-
     - name: Upload artifacts to release
       if: ${{ steps.check_release.outputs.release_exists == 'true' || steps.create_release.outputs.id != '' }}
       run: |
