--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
   build-linux-pre-merge:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
+    if: github.event_name != 'workflow_dispatch' && github.event_name == 'pull_request' && github.event.pull_request.merged == false
     outputs:
       sha: ${{ steps.get_sha.outputs.sha }}
     steps:
